examples/test/testpolicy8229.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8229
  namespace: namespace476
spec:
  podSelector:
    matchLabels:
      key25: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value19
          key9: value7
      podSelector:
        matchLabels:
          key28: value20
          key43: value1
